<resources>
    <string name="app_name">With Pet</string>

    <string name="google_sign_in">Google 로그인</string>
    <string name="naver_sign_in">네이버 로그인</string>
    <string name="kakao_sign_in">카카오 로그인</string>
    <string name="login_type">login_type</string>

    <string name="town_setting">동네 설정</string>
    <string name="town_search_result">동네 검색 결과</string>

    <string name="sign_up">회원가입</string>
    <string name="detail_info">상세정보</string>
    <string name="account">계정</string>
    <string name="profile">프로필</string>
    <string name="pet_list">내 반려동물들</string>
    <string name="pet_profile">반려동물 프로필</string>
    <string name="review">리뷰</string>
    <string name="write_review">리뷰 작성하기</string>
    <string name="like_person_list">찜한 돌봄이</string>
    <string name="like_post_list">찜한 게시물</string>
    <string name="registration">등록</string>
    <string name="filter">필터</string>
    <string name="apply">적용하기</string>
    <string name="reset">초기화</string>

    <string name="reservation_history">예약 내역</string>
    <string name="give_service">맡아준 내역</string>
    <string name="take_service">맡긴 내역</string>
    <string name="usage_before">이용 전</string>
    <string name="usage_now">이용 중</string>
    <string name="usage_finish">이용 완료</string>
    <string name="see_profile">프로필 보기</string>
    <string name="go_chat">채팅하기</string>

    <string name="profile_setting">프로필 설정</string>
    <string name="start">시작하기</string>

    <string name="entire">전체</string>
    <string name="walk">산책</string>
    <string name="care">돌봄</string>
    <string name="exp">체험</string>

    <string name="pet_category">반려동물 종류</string>
    <string name="dog">강아지</string>
    <string name="cat">고양이</string>
    <string name="etc">기타</string>

    <string name="register">등록하기</string>
    <string name="see_user_post">게시물 모아보기</string>
    <string name="suggest_by_chat">채팅으로 제안하기</string>

    <string name="nickname">닉네임</string>
    <string name="town">동네</string>
    <string name="introduce">자기소개</string>
    <string name="available_service">이용 가능 서비스</string>
    <string name="person_review">서비스 이용자 후기</string>
    <string name="pet_review">체험 후기</string>
    <string name="master">보호자</string>

    <string name="certification">자격 및 교육</string>
    <string name="certification_name">자격증 이름</string>
    <string name="certification_org">인증 기관</string>
    <string name="certification_date">취득 날짜</string>

    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="surgery">중성화</string>
    <string name="category">종류</string>
    <string name="variety">품종</string>
    <string name="birthday">생일</string>
    <string name="age">나이</string>
    <string name="weight">몸무게</string>
    <string name="kg">kg</string>
    <string name="caution">특이사항</string>

    <string name="service">서비스</string>
    <string name="fee">비용</string>
    <string name="reservation_date">예약 날짜</string>
    <string name="reviewed_nickname">담당자</string>
    <string name="review_notice">평점과 리뷰를 남겨주세요!</string>
    <string name="review_image_add_count">0/3</string>

    <string name="pet_choice">반려동물 선택</string>
    <string name="no_pet">맡길 수 있는 반려동물이 없습니다.</string>
    <string name="go_register">등록하러 가기</string>
    <string name="service_choice">서비스 선택</string>
    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="year">연도</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="hour">시</string>
    <string name="minute">분</string>

    <string name="photo_register">사진 등록</string>
    <string name="register_your_pet_photo">당신의 반려동물 사진을 올려주세요!</string>
    <string name="selected_photo">선택된 사진 목록</string>
    <string name="title">제목</string>
    <string name="reward">보상</string>
    <string name="fee_suffix">원 / 시간</string>
    <string name="service_detail">서비스 상세</string>
    <string name="request">요청 사항</string>
    <string name="service_class">서비스 종류</string>
    <string name="period">기간</string>
    <string name="free">무료</string>
    <string name="fee_range">%1$s ~ %2$s</string>

    <string name="decide">결정</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="sign_out_message">로그아웃하시겠습니까?</string>
    <string name="unlink_message">탈퇴하시겠습니까?</string>

    <!-- example -->
    <string name="walk_count_example">12건</string>
    <string name="care_count_example">4건</string>
    <string name="exp_count_example">0건</string>

    <string name="nickname_example">홍길동</string>
    <string name="town_example">논현1동</string>
    <string name="full_town_example">서울특별시 강남구 논현1동</string>
    <string name="introduce_subtitle_example">현재 6세 말티즈를 키우고 있고, 자격증을 보유 하고 있습니다.</string>
    <string name="review_example">4.7</string>

    <string name="certificate_name_example">펫시터 전문가 교육</string>
    <string name="certificate_org_example">(사) K.S.D 문화교육원</string>
    <string name="certificate_date_example">2020년 4월 14일</string>

    <string name="name_example">콩이</string>
    <string name="gender_example">남자</string>
    <string name="surgery_example">O</string>
    <string name="category_example">강아지</string>
    <string name="variety_example">말티즈</string>
    <string name="birthday_example">2019년 10월 28일</string>
    <string name="age_example">3살</string>
    <string name="weight_example">2.8</string>
    <string name="weight_kg_example">2.8 kg</string>
    <string name="caution_example">청력이 약해서 소리를 잘 듣지 못합니다.</string>

    <string name="review_date_example">2021년 12월 3일</string>
    <string name="review_name_example">지휘찬</string>
    <string name="review_fee_example">10,000원 / 시간</string>
    <string name="review_text_example">저희 아이들이 너무 좋아해요\n처음 후기 남겨보는데 자주 애용하겠습니다\n너무 친절하셔요 :)</string>

    <string name="post_title_example">3시간 정도 한강 공원 산책 시켜주실 분~</string>
    <string name="post_date_example">02/14 09:00 – 02/14 12:00</string>
    <string name="post_category_example">강아지</string>
    <string name="post_service_example">산책</string>
    <string name="post_fee_example">-10,000원/시간</string>
    <string name="register_town_example">논현1동</string>
    <string name="register_date_example">02월 14일 AM 09:00 ~ 02월 14일 PM 12:00</string>
    <string name="register_request_example">가파른 산은 가급적 피해주시길 바랍니다.</string>

    <string name="start_date_example">22.01.30 PM 01:30</string>
    <string name="end_date_example">22.01.30 PM 04:30</string>

    <!-- content description -->
    <string name="my_profile_menu_icon">내 프로필 관리하기 아이콘</string>
    <string name="pet_profile_menu_icon">반려동물 프로필 관리하기 아이콘</string>
    <string name="like_person_menu_icon">찜한 돌봄이 아이콘</string>
    <string name="like_pet_menu_icon">찜한 반려동물 아이콘</string>
    <string name="notice_menu_icon">공지사항 아이콘</string>
    <string name="faq_menu_icon">FAQ 아이콘</string>
    <string name="setting_menu_icon">환경설정 아이콘</string>
    <string name="logout_menu_icon">로그아웃 아이콘</string>
    <string name="withdrawal_menu_icon">회원탈퇴 아이콘</string>

    <string name="main_fab_desc">맡기기 등록 버튼</string>
    <string name="gps_desc">GPS 버튼</string>
    <string name="back_desc">뒤로가기 버튼</string>
    <string name="profile_image_desc">프로필 이미지</string>
    <string name="edit_image_desc">이미지 수정</string>
    <string name="town_edit_desc">동네 수정</string>
    <string name="clear_button_desc">닫기 버튼</string>
    <string name="certificate_add_desc">자격 및 교육 추가</string>
    <string name="certificate_image_desc">자격증 사진</string>
    <string name="more_review_desc">리뷰 더보기</string>
    <string name="review_image_add_desc">리뷰 이미지 추가</string>
    <string name="post_thumbnail_desc">게시물 썸네일</string>
    <string name="review_image_desc">리뷰 이미지</string>
    <string name="post_image_desc">게시물 이미지</string>
    <string name="service_image_desc">서비스 이미지</string>

    <!-- account menu text -->
    <string name="my_profile_menu">내 프로필 관리하기</string>
    <string name="pet_profile_menu">반려동물 프로필 관리하기</string>
    <string name="like_person_menu">찜한 돌봄이</string>
    <string name="like_post_menu">찜한 게시물</string>
    <string name="notice_menu">공지사항</string>
    <string name="faq_menu">FAQ</string>
    <string name="setting_menu">환경설정</string>
    <string name="logout_menu">로그아웃</string>
    <string name="withdrawal_menu">회원탈퇴</string>

    <!-- hint -->
    <string name="nickname_hint">닉네임을 입력해주세요.</string>
    <string name="town_hint">동네 검색</string>
    <string name="post_hint">게시물 검색</string>
    <string name="review_hint">다른 이용자들을 위해 리뷰를 작성해주세요.</string>
    <string name="title_hint">게시물 제목을 입력해주세요</string>
    <string name="fee_hint">비용을 입력해주세요</string>
    <string name="reward_hint">보상을 입력해주세요</string>
    <string name="request_hint">요청 사항을 입력해주세요.</string>
</resources>